# rm_control_study

./: .gitignore  CMakeLists.txt  README.md  joint1_vel_controller_plugins.xml  left_front_wheel_controller_plugins.xml  package.xml
config/: controllers.yaml  left_front_wheel_controller.yaml  rm_hw.yaml
include/: joint1_vel_controller.h  left_front_wheel_controller.h
launch/: left_front_wheel_controller.launch
src/: joint1_vel_controller.cpp  left_front_wheel_controller.cpp
test/: sim.launch  start.launch
urdf/: my_robot.xacro
