<?xml version="1.0"?>
<package format="2">
    <name>rm_control_study</name>
    <version>0.0.0</version>
    <description>The rm_control_study package</description>

    <maintainer email="liao@todo.todo">liao</maintainer>

    <license>TODO</license>


    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>rm_common</depend>

    <depend>controller_interface</depend>
    <depend>effort_controllers</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        <controller_interface plugin="${prefix}/joint1_vel_controller_plugins.xml"/>
    </export>
</package>
